--- a/Barak_about_page.html
+++ b/Barak_about_page.html
@@ -24,7 +24,7 @@
 	<br><br>
 	<p id="meaning"><span id="CMB">CMB</span>, stands for <span id="C">C</span>eline  <span id="M">M</span>eera  <span id="B">B</span>arak</p>
 	<br><br>
-	<p id="offer">We offer our help for everyone about: Time Management, Food Picking and more.</p>
+	<p id="offer">We offer our help for everyone with: Time Management, Food Picking and Remember to Drink Enough Water.</p>
 	<br>
 	<p id="offer">We hope to make it easier for our users to make different choices, be more productive and feel less stressed.</p>
 	<br><br>
