--- a/Barak_main_page.html
+++ b/Barak_main_page.html
@@ -33,19 +33,22 @@
         <p class="card-text" id="time_answer"><br>We are here to help!<br>Help us help you orginize your time in the best way!</p>
       </div></a>
     </div>
-    <div class="card bg-warning"> <!--bg-warning == yellow -->
+    <a href="./food.html" style="text-decoration: none"><div class="card bg-warning"> <!--bg-warning == yellow -->
       <div class="card-body">
         <p class="card-text" id="food_title">Food Picker</p>
-        <p class="card-text" id="food_image"><image src="Barak_food.png" height="180" width="310"></image>
+        <p class="card-text" id="food_image"><image src="Barak_food.png" height="180" width="310"></image></p>
         <p class="card-text" id="food_question">Do you feel like you can't choose what to eat?</p>
         <p class="card-text" id="food_answer"><br>We have a solution especially for you!<br>Try out our Food Picker!<br>We will help you pick your next tasty meal!</p>
-      </div>
+      </div></a>
     </div>
-    <div class="card bg-success"> <!--bg-success == green -->
-      <div class="card-body text-center">
-        <p class="card-text" id="empty">Some text inside the third card</p>
-      </div>
-    </div> 
+    <a href="./water.html" style="text-decoration: none"><div class="card bg-success"> <!--bg-success == green -->
+      <div class="card-body">
+        <p class="card-text" id="water_title">Drink Enough Water</p>
+        <p class="card-text" id="water_image"><image src="Barak_water.jpg" height="180" width="310"></image></p>
+        <p class="card-text" id="water_question">Are you drinking enough water?<br>Not sure if you need to drink more?</p>
+        <p class="card-text" id="water_answer"><br>Click here and we will help you know if you drink enough!</p>
+      </div></a>
+    </div>
   </div>
 </div>
 <br><br>
