--- a/Barak_food2.html
+++ b/Barak_food2.html
@@ -9,7 +9,7 @@
   <h1 align="center"> Food Picker </h1>
   <div>
     <h2> What type of food do you want to eat? </h2>
-<form method="POST" name="food_form2" action="./Barak_next.html">
+<form method="POST" name="food_form2" action="./Barak_next_page.html">
   <input type="radio" id="american" name="food" value="american" size=10 >
   <label for="american" id="a_food">American Breakfast</label>
   <input class="margin" type="radio" id="greek" name="food" value="greek" >
