--- a/Barak_food3.html
+++ b/Barak_food3.html
@@ -8,7 +8,7 @@
   <h1 align="center"> Food Picker </h1>
   <div>
     <h2> What type of food do you want to eat? </h2>
-<form method="POST" name="food_form2" action="./Barak_next.html">
+<form method="POST" name="food_form2" action="./Barak_next_page.html">
     <input type="radio" id="american" name="food" value="american" size=10 >
   <label for="american">American Lunch</label>
   <input class="margin3" type="radio" id="greek" name="food" value="greek" >
