--- a/Barak_food5.html
+++ b/Barak_food5.html
@@ -8,7 +8,7 @@
   <h1 align="center"> Food Picker </h1>
   <div>
     <h2> Do you want sweet or salty snacks? </h2>
-<form method="POST" name="food_form2" action="./Barak_next.html">
+<form method="POST" name="food_form2" action="./Barak_next_page.html">
     <input type="radio" id="sweet" name="food" value="sweet" size=10 >
   <label for="sweet">Sweet snacks</label>
   <input class="margin4" type="radio" id="salty" name="food" value="salty" >
