--- a/meeratable.html
+++ b/meeratable.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Bootstrap Example</title>
+  <title>table</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
@@ -9,12 +9,25 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 
+  <a href="https://calendar.google.com/calendar/r?
+action=TEMPLATE
+&text=[event-title]
+&dates=[start-custom format='Ymd\\THi00\\Z']/[end-custom format='Ymd\\THi00\\Z']
+&details=[description]
+&location=[location]
+&trp=false
+&sprop=
+&sprop=name:"
+target="_blank" rel="nofollow">Add a reminder to my calendar</a>
+
 
 <tbody id="table-body">
 
   <div class="container-fluid">
            <div class="col-sm">
              <div class="col-sm-8 col-lg-9">
+
+
 
             
 
