--- a/meerait-s.html
+++ b/meerait-s.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -43,6 +42,16 @@ function home()
 
 	}
 
+		#button
+		{
+			background-color: green; 
+			border: solid;
+			color: white;
+			padding: 8px 30px;
+  			text-align: center;
+  			font-size: 25px;
+  			border-radius: 12px;
+  		}
 
 
 		.starter-template{
@@ -186,9 +195,41 @@ function home()
 	<h3>2.italian gelato  </h3>
 
 
-	<img src="its.jpg" width="450" height="400">
+	<img src="its.jpg" width="552" height="400">
 	
-	<img src="its3.jpg" width="450" height="400">
+	<img src="its3.jpg" width="552" height="400">
+
+	<br><br>
+	<div align="center">
+	<button id="button" onclick="change();">Change</button>
+	</div>
+	
+	<script>
+		function change()
+		{
+			var before=3;
+			do
+			{
+				var random=Math.floor(Math.random() * 3) + 1;
+			}
+			while(random==before);
+			switch(random)
+			{
+				case 1:
+					window.document.location="./meeraam-s.html";
+					break;
+				case 2:
+					window.document.location="./meeragr-s.html";
+					break;
+				case 3:
+					window.document.location="./meerait-s.html";
+					break;
+				default:
+					alert("An error has occured. Tell CMB owners about it");
+					console.log("Error with the random number");
+		}
+		}
+	</script>
 	
 </head>
 
